--- a/gui/.classpath
+++ b/gui/.classpath
@@ -6,43 +6,43 @@
 			<attribute name="ignore_optional_problems" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="/home/alex/Documents/benchitSVN/gui/lib"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/XmlSchema-1.4.2.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="/tmp/apache-ant-1.9.2/lib/ant.jar" sourcepath="lib/ant192.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/axiom-api-1.2.7.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/axiom-dom-1.2.7.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/axiom-impl-1.2.7.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/axis2-adb-1.4.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/axis2-kernel-1.4.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/backport-util-concurrent-3.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/commons-httpclient-3.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/ganymed-ssh2-261.jar" sourcepath="lib/ganymed-ssh2-261-sources.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/gnu.getopt.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/iText-2.1.3.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/jcommon-0.9.0.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/jedit.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/jfreechart-0.9.8.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/neethi-2.0.4.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/stax-api-1.0.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/wsdl4j-1.6.2.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/wstx-asl-3.2.4.jar"/>
+	<classpathentry kind="con" path="lib"/>
+	<classpathentry kind="lib" path="lib/XmlSchema-1.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/apache-ant-1.9.3/lib/ant.jar"/>
+	<classpathentry kind="lib" path="lib/axiom-api-1.2.7.jar"/>
+	<classpathentry kind="lib" path="lib/axiom-dom-1.2.7.jar"/>
+	<classpathentry kind="lib" path="lib/axiom-impl-1.2.7.jar"/>
+	<classpathentry kind="lib" path="lib/axis2-adb-1.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/axis2-kernel-1.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/backport-util-concurrent-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/ganymed-ssh2-261.jar" sourcepath="lib/ganymed-ssh2-261-sources.jar"/>
+	<classpathentry kind="lib" path="lib/gnu.getopt.jar"/>
+	<classpathentry kind="lib" path="lib/iText-2.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jcommon-0.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/jedit.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-0.9.8.jar"/>
+	<classpathentry kind="lib" path="lib/neethi-2.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/stax-api-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/wsdl4j-1.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/wstx-asl-3.2.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-export-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-graphics2d-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-graphicsio-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-graphicsio-emf-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-graphicsio-java-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-graphicsio-pdf-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-graphicsio-ps-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-graphicsio-svg-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-graphicsio-swf-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-graphicsio-tests-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-io-2.0.2.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-swing-2.0.3.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-util-2.0.2.jar"/>
-	<classpathentry kind="lib" path="/home/alex/Documents/benchitSVN/gui/lib/freehep-xml-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-export-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-graphics2d-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-graphicsio-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-graphicsio-emf-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-graphicsio-java-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-graphicsio-pdf-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-graphicsio-ps-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-graphicsio-svg-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-graphicsio-swf-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-graphicsio-tests-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-io-2.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-swing-2.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-util-2.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/freehep-xml-2.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
