--- a/gui/.project
+++ b/gui/.project
@@ -18,22 +18,22 @@
 		<link>
 			<name>classes</name>
 			<type>2</type>
-			<location>/home/alex/Documents/benchitSVN/gui/build/classes</location>
+			<location>build/classes</location>
 		</link>
 		<link>
 			<name>generated</name>
 			<type>2</type>
-			<location>/home/alex/Documents/benchitSVN/gui/src/generated</location>
+			<location>src/generated</location>
 		</link>
 		<link>
 			<name>lib</name>
 			<type>2</type>
-			<location>/home/alex/Documents/benchitSVN/gui/lib</location>
+			<location>gui/lib</location>
 		</link>
 		<link>
 			<name>service</name>
 			<type>2</type>
-			<location>/home/alex/Documents/benchitSVN/gui/src/generated/org/benchit/bitconnect/service</location>
+			<location>src/generated/org/benchit/bitconnect/service</location>
 		</link>
 	</linkedResources>
 </projectDescription>
